traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:7: error: ':' expected but ',' found.
  def trianglemoitie1(x,y){
                       ^TraversalDiagonal:20: error: identifier expected but '}' found.
} 
^